--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body class="fondo" background="F:/Estudios/Curso HTML, CSS y Javascript/Blog Prueba/fondo.jpg"></body>
     <div class="cabecera">
         <div class="titulo">
-            Blog Roberto Rodríguez Carbonell.
+            Blog Roberto Rodríguez Carbonell. Alias: Alias.
         </div>
         <div class="tituloSecundario">
             Este es un blog creado para uso personal y para practicar mis conocimientos.
